--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:layout_gravity="bottom"
         app:bbn_entries="@menu/navigation"
         app:bbn_itemColorInactive="@color/colorAccent"
-        app:bbn_scrollEnabled="true"
+        app:bbn_scrollEnabled="false"
         app:layout_behavior="@string/bbn_phone_view_behavior"
         />
 
