--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,7 @@
     <dimen name="large_formatted_text_size_36sp">36sp</dimen>
     <dimen name="large_formatted_text_size_32sp">32sp</dimen>
     <dimen name="activity_horizontal_double_margin">32dp</dimen>
+    <dimen name="tablet_header_text_size_50sp">50sp</dimen>
+    <dimen name="tablet_scoring_title_42sp">42sp</dimen>
+    <dimen name="scoreboard_large_text_90sp">90sp</dimen>
 </resources>
