--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,7 +11,6 @@
         android:background="@color/colorPrimaryTabOne"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_menu1" />
-
     <item
         android:id="@+id/navigation_dashboard"
         android:background="@color/colorPrimaryTabTwo"
@@ -19,15 +18,21 @@
         android:title="@string/title_menu2" />
 
     <item
+        android:id="@+id/navigation_full_game"
+        android:background="@color/colorPrimaryTabTwo"
+        android:icon="@drawable/ic_compare_arrows_black_24dp"
+        android:title="@string/title_menu3" />
+
+    <item
         android:id="@+id/navigation_stats"
         android:background="@color/colorPrimaryTabThree"
         android:icon="@drawable/ic_person_add_black_24dp"
-        android:title="@string/title_menu3" />
+        android:title="@string/title_menu4" />
 
     <item
         android:id="@+id/navigation_history"
         android:background="@color/colorPrimaryTabFour"
         android:icon="@drawable/ic_assessment_black_24dp"
-        android:title="@string/title_menu4" />
+        android:title="@string/title_menu5" />
 
 </menu>
